po: update po/es_ES/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/event.po
+++ b/po/es_ES/event.po
@@ -9,11 +9,11 @@
 # fmcooke <fmcooke@yahoo.com>, 2012
 # fmcooke <fmcooke@yahoo.com>, 2012
 # francescbassas <francesc@babu.cat>, 2015
-# ixiam <info@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2013,2016
 # ixiam <info@ixiam.com>, 2011
 # Javier Monterroso <jmonterroso@ndi.org>, 2015
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
-# Marti <m.prat@ixiam.com>, 2014-2015
+# Marti Prat <m.prat@ixiam.com>, 2014-2015
 # olgaberrios <olgaberrios@masticable.org>, 2012
 # olgaberrios <olgaberrios@masticable.org>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-18 15:41+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1950,7 +1950,7 @@ msgid ""
 "waitlist work-flow (click the pencil icon, or navigate to Administer » "
 "CiviEvent » Participant Statuses). Then reload this form and check 'Offer a "
 "Waitlist?'."
-msgstr "Puedes permitir a los usuarios  unirse a una lista de espera, cuando el evento está lleno . Para activar esta función debe activar primero la opción \" estados de los participantes\" utilizados por la lista de espera del flujo de trabajo ( haga clic en el icono del lápiz , o navegue por el menú hasta Administrar » CiviEvent » Estado de los participante ) . A continuación vuelva a cargar y compruebe si se ofrece una lista de espera."
+msgstr "Puedes permitir a los usuarios unirse a una lista de espera cuando el evento está lleno. Para activar esta función se debe activar primero los estados de los participantes utilizados por el flujo de trabajo de la lista de espera (haga clic en el icono del lápiz, o navega por el menú hasta Administrar » CiviEvent » Estados del participante). A continuación, recargar la página y comprobar si se ofrece una lista de espera."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -1958,7 +1958,7 @@ msgid ""
 "Message&quot' is displayed when the maximum number of registrations is "
 "reached. Only participants with status types marked as 'counted' are "
 "included when checking if the event is full."
-msgstr "De otra forma, el vínculo de registro estará oculto y el mensaje de evento completo será mostrado cuando se llegue al máximo de participante habilitados. Solo cuando el estado del participante ha sido marcado como Contado será incluido en la cuenta de participantes. "
+msgstr "Por el contrario, cuando se llegue al máximo de participantes inscritos, el botón de inscripción estará oculto i se mostrará el mensaje &quot;El evento está completo&quot'. Sólo cuando los participantes se marquen como 'contabilizados', se tendrán en cuenta para comprobar si el evento está completo."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Event-Full Message"
@@ -2011,13 +2011,13 @@ msgstr "Cuando esté habilitado, este evento será incluido en iCalendar y mostr
 msgid ""
 "When enabled, links allowing people to share this event with their social "
 "network will be displayed (e.g. Facebook \"Like\", Google+, and Twitter)."
-msgstr "Cuando se encuentre habilitado, el vínculo permitiendo compartir el evento en las redes sociales será mostrado (Ejemplo Facebook \"Like\", Google+, y Twiter)"
+msgstr "Cuando se encuentre habilitado, los enlaces permiten compartir el evento en las redes sociales que se muestran (por ejemplo Facebook \"Like\", Google+, y Twiter)."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
 "Social media links will be included on the Event Info page, Thank-you page, "
 "Tell-a-Friend page (if enabled), and in event confirmation emails."
-msgstr "Vínculos a las redes sociale serán incluidos en la página de información del evento, página de agradecimiento, avisa a un amigo (Si está habilitada) y en los correos electrónicos de confirmación"
+msgstr "Los enlaces a las redes sociales serán incluidos en la página de información del evento, la página de agradecimiento, la de envía a un amigo/a (si está habilitada) y en los correos electrónicos de confirmación."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.tpl
 msgid ""
