po: update po/es_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/common-components.po
+++ b/po/es_ES/common-components.po
@@ -29,7 +29,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-16 14:51+0000\n"
+"PO-Revision-Date: 2016-08-18 15:03+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -485,7 +485,7 @@ msgstr "Título de la página de agradecimiento "
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "Allow sharing through social media?"
-msgstr "¿Permitir el intercambio a través de medios de comunicación social?"
+msgstr "¿Permitir el intercambio a través de redes sociales?"
 
 #: CRM/Campaign/Form/Survey/Results.php
 #: CRM/Report/Form/Campaign/SurveyDetails.php
