--- a/po/th_TH/member.po
+++ b/po/th_TH/member.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # AriesAnywhere Anywhere <ariesanywhere@gmail.com>, 2012
+# เฟริน <noopim414@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-18 06:12+0000\n"
+"Last-Translator: เฟริน <noopim414@gmail.com>\n"
 "Language-Team: Thai (Thailand) (http://www.transifex.com/civicrm/civicrm/language/th_TH/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1593,7 +1594,7 @@ msgstr ""
 
 #: templates/CRM/Member/Form/MembershipStatus.tpl
 msgid "Is this status enabled."
-msgstr ""
+msgstr "แนะนำบริการออนไลน์"
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
