--- a/po/af_ZA/admin.po
+++ b/po/af_ZA/admin.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Thabo Pienaar <umfundise@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-21 14:52+0000\n"
+"Last-Translator: Thabo Pienaar <umfundise@gmail.com>\n"
 "Language-Team: Afrikaans (http://www.transifex.com/civicrm/civicrm/language/af/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,7 +56,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Install"
-msgstr ""
+msgstr "Installeer"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
