--- a/po/de_DE/event.po
+++ b/po/de_DE/event.po
@@ -8,6 +8,7 @@
 # Axel <axel@pyter.de>, 2013
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Danny Liebig <danny.liebig@hotmail.de>, 2012
+# Dennis Staufer <staufes@gmail.com>, 2016
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2013
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
 # Ettore Atalan <atalanttore@googlemail.com>, 2016
@@ -32,8 +33,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-16 08:24+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"PO-Revision-Date: 2016-08-21 12:54+0000\n"
+"Last-Translator: Dennis Staufer <staufes@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -170,7 +171,7 @@ msgstr "Bezahlung vollständig"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Complete Transaction"
-msgstr ""
+msgstr "Transaktion fertiggestellt"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Alternative Payment Type"
@@ -1046,7 +1047,7 @@ msgstr "Bitte gehen Sie zurück zur Hauptanmeldeseite, um die Zahlungsinformatio
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid "Skip Participant"
-msgstr ""
+msgstr "Teilnehmer überspringen"
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid "A person is already registered for this event."
@@ -1464,7 +1465,7 @@ msgstr "CiviCRM Veranstaltungs-Funktion"
 
 #: CRM/Event/Info.php
 msgid "access CiviEvent"
-msgstr ""
+msgstr "Zugriff auf CiviEvent"
 
 #: CRM/Event/Info.php
 msgid ""
@@ -3681,7 +3682,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Self-service Cancellation or Transfer"
-msgstr ""
+msgstr "Erlaube Stornierung oder Transfer von User"
 
 #: CRM/Event/DAO/Event.php
 msgid "Self-service Cancellation or Transfer Time"
@@ -3737,7 +3738,7 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Transfer Registration"
-msgstr ""
+msgstr "Transferiere Registrierung"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Enter valid email address."
@@ -3745,19 +3746,19 @@ msgstr "Bitte geben Sie eine gültige E-Mail-Adresse ein."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid " is already registered for this event"
-msgstr ""
+msgstr "ist bereits für diese Veranstaltung registriert"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Registration Transferred"
-msgstr ""
+msgstr "Registrierung transferiert"
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "A cancellation email has been sent to %1."
-msgstr ""
+msgstr "Eine Stornierungs-Email wurde an %1 gesendet."
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "Thanks"
-msgstr ""
+msgstr "Vielen Dank"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
@@ -3774,19 +3775,19 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Transfer or Cancel Registration"
-msgstr ""
+msgstr "Transferiere oder storniere Registrierung"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Transfer"
-msgstr ""
+msgstr "Transferieren"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Submit"
-msgstr ""
+msgstr "Absenden"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Please select Transfer OR Cancel action."
-msgstr ""
+msgstr "Bitte wähle Transferieren oder Stornieren."
 
 #: CRM/Event/Form/Task/Batch.php CRM/Event/Form/Task/PickProfile.php
 #: CRM/Event/Task.php
@@ -3805,15 +3806,15 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Export participants"
-msgstr ""
+msgstr "Teilnehmer/innen exportieren"
 
 #: CRM/Event/Task.php
 msgid "Cancel registration"
-msgstr ""
+msgstr "Anmeldung stornieren"
 
 #: CRM/Event/Task.php
 msgid "Participant status - change (emails sent)"
-msgstr ""
+msgstr "Teilnehmer/innen Status - Änderung (Email versendet)"
 
 #: CRM/Event/Task.php
 msgid "Name badges - print"
@@ -3867,7 +3868,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Allow Self-service Cancellation or Transfer?"
-msgstr ""
+msgstr "Erlaube Stornierung oder Transfer von User?"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3897,34 +3898,34 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "View this Participant"
-msgstr ""
+msgstr "Diesen Teilnehmer ansehen"
 
 #: templates/CRM/Event/Form/SelfSvcTransfer.tpl
 msgid "Current<br />Participant"
-msgstr ""
+msgstr "Aktueller<br />Teilnehmer"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Thank you for your participation."
-msgstr ""
+msgstr "Wir bedanken uns für Ihre Anmeldung."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong> %1</strong>."
-msgstr ""
+msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu %1 geändert."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>waitlisted</strong>."
-msgstr ""
+msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu <strong>Warteliste</strong> geändert."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>registered<strong>."
-msgstr ""
+msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu <strong>registriert</strong> geändert."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
@@ -3933,55 +3934,55 @@ msgstr ""
 msgid ""
 "You may transfer your registration to another participant or cancel your "
 "registration up to %1 hours before the event."
-msgstr ""
+msgstr "Sie können Ihre Registrierung stornieren oder auf eine andere Person übertragen bis maximal %1 Stunden vor der Veranstaltung."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/participant_confirm_html.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
 msgid "Cancellations are not refundable."
-msgstr ""
+msgstr "Stornierung sind nicht rückerstattbar."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/participant_confirm_html.tpl
 msgid "Click here to transfer or cancel your registration."
-msgstr ""
+msgstr "Klicken Sie hier, um Ihre Registrierung zu stornieren oder transferieren."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to %1."
-msgstr ""
+msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu %1 geändert."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to waitlisted."
-msgstr ""
+msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu Warteliste geändert."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to registered."
-msgstr ""
+msgstr "Diese Seite ist eine Bestätigung für das Einlangen Ihrer Registrierung. Ihr Status wurde zu registriert geändert."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
 msgid "Transfer or cancel your registration:"
-msgstr ""
+msgstr "Transferieren oder stornieren Sie ihre Registrierung:"
 
 #: xml/templates/message_templates/participant_confirm_html.tpl
 msgid "Self service cancel transfer"
-msgstr ""
+msgstr "eigene Stornierung oder Transfer"
 
 #: xml/templates/message_templates/participant_transferred_html.tpl
 msgid "Your Event Registration has been Transferred to %1."
-msgstr ""
+msgstr "Ihre Veranstaltungsanmeldung wurde transferiert zu %1."
 
 #: xml/templates/message_templates/participant_transferred_subject.tpl
 msgid "Event Registration Transferred for %1"
-msgstr ""
+msgstr "Veranstaltungsanmeldung transferiert für %1"
 
 #: xml/templates/message_templates/participant_transferred_text.tpl
 msgid "Your Event Registration has been transferred to %1."
-msgstr ""
+msgstr "Ihre Veranstaltungsanmeldung wurde transferiert zu %1."
