po: update po/es_ES/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/campaign.po
+++ b/po/es_ES/campaign.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 10:40+0000\n"
+"PO-Revision-Date: 2016-08-22 11:38+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -47,7 +47,7 @@ msgstr "El parámetro sid (survey id) no existe. No se puede procesar."
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr ""
+msgstr "El Id de la petición y/o de la actividad no es del tipo Positivo"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey - %1"
@@ -157,7 +157,7 @@ msgstr "Instrucciones"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Hold Duration"
-msgstr "Duración de retención de Encuesta"
+msgstr "Duración de retención de la encuesta"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Maximum number of contacts"
@@ -491,8 +491,8 @@ msgstr "No se han encontrado encuestados de esta encuesta para ser liberados."
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Respondent has been released."
 msgid_plural "%count respondents have been released."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "El encuestado ha sido liberado."
+msgstr[1] "%count encuestados han sido liberados"
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Released"
@@ -501,8 +501,8 @@ msgstr "Liberado"
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
 msgid_plural "%count respondents did not release."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 encuestado no ha sido liberado."
+msgstr[1] "%count encuestados no han sido liberados"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
@@ -545,8 +545,8 @@ msgstr "Reserva de encuestado"
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "%count contact has been reserved."
 msgid_plural "%count contacts have been reserved."
-msgstr[0] "/count contacto ha sido asignado."
-msgstr[1] "/count contactos han sido asignados."
+msgstr[0] "%count contacto ha sido asignado."
+msgstr[1] "%count contactos han sido asignados."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "They have been added to %1."
@@ -559,12 +559,12 @@ msgstr "Reserva añadida"
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reservation did not add for %count contact."
 msgid_plural "Reservation did not add for %count contacts."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "La reserva no ha sido añadida a %count contacto."
+msgstr[1] "La reserva no ha sido añadida a %count contactos."
 
 #: CRM/Campaign/Info.php
 msgid "administer CiviCampaign"
-msgstr "Administrar CiviCase"
+msgstr "Administrar CiviCampaign"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaign, survey and petition types and their status"
@@ -576,7 +576,7 @@ msgstr "gestionar campaña"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaigns, surveys and petitions, reserve respondents"
-msgstr ""
+msgstr "Crear nuevas campañas, encuestar y peticiones, reservar encuestados"
 
 #: CRM/Campaign/Info.php
 msgid "reserve campaign contacts"
@@ -584,7 +584,7 @@ msgstr "asignar contactos de la campaña"
 
 #: CRM/Campaign/Info.php
 msgid "Reserve campaign contacts for surveys and petitions"
-msgstr ""
+msgstr "Reservar contactos de la campaña para encuestas y peticiones"
 
 #: CRM/Campaign/Info.php
 msgid "release campaign contacts"
@@ -592,15 +592,15 @@ msgstr "liberar contactos de campaña"
 
 #: CRM/Campaign/Info.php
 msgid "Release reserved campaign contacts for surveys and petitions"
-msgstr ""
+msgstr "Liberar contactos reservados de las campañas para encuestas y peticiones"
 
 #: CRM/Campaign/Info.php
 msgid "interview campaign contacts"
-msgstr "Contactos de la entrevista de campaña"
+msgstr "Entrevistar contactos de la campaña"
 
 #: CRM/Campaign/Info.php
 msgid "Record survey and petition responses from their reserved contacts"
-msgstr ""
+msgstr "Guardar encuestas y respuestas a peticiones de los contactos reservados"
 
 #: CRM/Campaign/Info.php
 msgid "GOTV campaign contacts"
@@ -608,7 +608,7 @@ msgstr "Contactos de la campaña GOTV"
 
 #: CRM/Campaign/Info.php
 msgid "Record that contacts voted"
-msgstr "Registro de que los contactos votaron"
+msgstr "Registrar los contactos que han votado"
 
 #: CRM/Campaign/Info.php
 msgid "sign CiviCRM Petition"
@@ -796,7 +796,7 @@ msgstr "Campos de la petición."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Click here for new profile"
-msgstr "Clique aquí para un nuevo perfil"
+msgstr "Haga clic aquí para un nuevo perfil"
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "This title will be displayed at the top of the thank-you page."
@@ -1048,7 +1048,7 @@ msgstr "No existen campañas vigentes actualmente."
 msgid ""
 "If you want to associate this record with a campaign, you can <a %1>create a"
 " campaign here</a>."
-msgstr "Si quiere asociar este registro a una campaña, puede <a href=\"%1\">crear una campaña aquí</a>."
+msgstr "Si quiere asociar este registro a una campaña, puede <a %1>crear una campaña aquí</a>."
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
 msgid ""
