po: update po/es_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -42,7 +42,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-19 16:44+0000\n"
+"PO-Revision-Date: 2016-08-22 11:50+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -9303,7 +9303,7 @@ msgstr "Editas Api keys propias"
 
 #: CRM/Core/Permission.php
 msgid "Edit user's own API keys"
-msgstr ""
+msgstr "Editas las llaves Api propias"
 
 #: CRM/Core/QuickForm/Action/Upload.php
 msgid ""
@@ -12269,7 +12269,7 @@ msgstr "Campo de perfil guardado"
 msgid ""
 "Cannot add or update profile field \"%1\" with combination of Household or "
 "Organization or any subtypes of Household or Organization."
-msgstr ""
+msgstr "No se puede añadir o actualizar el campo del perfil \"%1\" en combinación con una Familia u Organización."
 
 #: CRM/UF/Form/Field.php
 msgid ""
@@ -12285,7 +12285,7 @@ msgstr "Perfil ya está teniendo campos personalizados que extienden diferentes 
 
 #: CRM/UF/Form/Field.php
 msgid "You have already added a primary location field of this type: %1"
-msgstr ""
+msgstr "Ya ha añadido un campo de ubicación primaria para este tipo: %1"
 
 #: CRM/UF/Form/Field.php
 msgid ""
@@ -12591,7 +12591,7 @@ msgstr "Estos es solo una interfaz y no deberia invocarse directamente"
 msgid ""
 "Case type \"%2\" has duplicate XML files (\"%3\" and \"%4\").<br /><a "
 "href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "El tipo de caso \"%2\" tiene ficheros XML duplicados (\"%3\" y \"%4\"). <br /><a href=\"%1\">Lea más acerca de este aviso</a>"
 
 #: CRM/Utils/Check/Case.php
 msgid "CiviCase"
@@ -12601,13 +12601,13 @@ msgstr "CiviCase"
 msgid ""
 "Case type \"%2\" corresponds to XML file (\"%3\") The XML file should be "
 "named \"%4\".<br /><a href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "El tipo de caso \"%2\" se corresponde con el fichero XML (\"%3\"). El fichero XML debería llamarse \"%4\". <br /><a href=\"%1\">Lea más acerca de este aviso</a>"
 
 #: CRM/Utils/Check/Env.php
 msgid ""
 "Timestamps reported by MySQL (eg \"%2\") and PHP (eg \"%3\" ) are "
 "mismatched.<br /><a href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "Los tiempos reportados por MySQL (ej \"%2\") y por PHP (ej \"%3\" ) no coinciden. <br /><a href=\"%1\">Lea más acerca de este aviso</a>"
 
 #: CRM/Utils/Check/Env.php
 msgid "Environment Settings"
@@ -12645,7 +12645,7 @@ msgstr "El documento '%1' presenta un riesgo de seguridad y debe ser eliminado."
 msgid ""
 "The system administrator has disabled security settings (%1). Connections to"
 " remote applications are insecure."
-msgstr ""
+msgstr "El administrador del sistema ha deshabilitado esta configuración de seguridad (%1). Las conexiones a aplicaciones remotas no son seguras."
 
 #: CRM/Utils/DeprecatedUtils.php
 msgid "Soft Credit %1 - %2 doesn't exist. Row was skipped."
@@ -13102,87 +13102,87 @@ msgstr "Mover al final"
 
 #: ang/crmApp.js
 msgid "Unknown path"
-msgstr ""
+msgstr "Camino desconocido"
 
 #: ang/crmAttachment/attachments.html
 msgid "Deleting an attachment will completely remove it from server."
-msgstr ""
+msgstr "Borrar un fichero adjunto lo borrará completamente del servidor. "
 
 #: ang/crmAttachment/attachments.html
 msgid "Delete attachment"
-msgstr ""
+msgstr "Eliminar archivo adjunto"
 
 #: ang/crmAttachment/attachments.html
 msgid "Remove unsaved attachment"
-msgstr ""
+msgstr "Eliminar adjunto no guardado"
 
 #: ang/crmAttachment/attachments.html
 msgid "Add file:"
-msgstr ""
+msgstr "Añadir archivo:"
 
 #: ang/crmAttachment/attachments.html
 msgid "Alternatively, you may add new files using drag/drop."
-msgstr ""
+msgstr "Alternativamente, puede añadir nuevos documentos arrastrándolos"
 
 #: ang/crmAttachment.js
 msgid "Attachment failed"
-msgstr ""
+msgstr "Adjunto ha fallado"
 
 #: ang/crmAttachment.js
 msgid "Deletion failed"
-msgstr ""
+msgstr "El borrado ha fallado"
 
 #: ang/crmAttachment.js
 msgid "Deleting..."
-msgstr ""
+msgstr "Borrando..."
 
 #: ang/crmUi/wizard.html
 msgid "Complete all required fields first"
-msgstr ""
+msgstr "Complete todos los campos requeridos primero"
 
 #: ang/crmUi/wizard.html
 msgid "Next step"
-msgstr ""
+msgstr "Siguiente paso"
 
 #: ang/crmUi.js
 msgid "My Title"
-msgstr ""
+msgstr "Mi título"
 
 #: ang/crmUi.js
 msgid "Debug (%1)"
-msgstr ""
+msgstr "Depurar (%1)"
 
 #: ang/crmUi.js
 msgid "My Field"
-msgstr ""
+msgstr "My campo"
 
 #: ang/crmUi.js
 msgid "Help"
-msgstr ""
+msgstr "Ayuda"
 
 #: ang/crmUi.js
 msgid "Boolfield is locked"
-msgstr ""
+msgstr "Boolfield está bloqueado"
 
 #: ang/crmUi.js
 msgid "Boolfield is unlocked"
-msgstr ""
+msgstr "Boolfield está desbloqueado"
 
 #: ang/crmUi.js
 msgid "Locked"
-msgstr ""
+msgstr "Bloqueado"
 
 #: ang/crmUi.js
 msgid "Unlocked"
-msgstr ""
+msgstr "Desbloqueado"
 
 #: ang/crmUi.js
 msgid "Step 1"
-msgstr ""
+msgstr "Paso 1"
 
 #: ang/crmUi.js
 msgid "Step 2"
-msgstr ""
+msgstr "Paso 2 "
 
 #: ang/crmUi.js js/Common.js
 msgid "Are you sure you want to continue?"
@@ -13190,35 +13190,35 @@ msgstr "¿Esta seguro que quiere continuar?"
 
 #: ang/crmUi.js
 msgid "Are you sure you want to disable this?"
-msgstr ""
+msgstr "¿Está seguro que quiere deshabilitar esto?"
 
 #: ang/crmUi.js
 msgid "Disable %1?"
-msgstr ""
+msgstr "¿Deshabilitar %1?"
 
 #: ang/crmUi.js
 msgid "the record"
-msgstr ""
+msgstr "el registro"
 
 #: ang/crmUi.js
 msgid "Are you sure you want to revert this?"
-msgstr ""
+msgstr "¿Está seguro que desea revertir esto?"
 
 #: ang/crmUi.js
 msgid "Revert"
-msgstr ""
+msgstr "Revertir"
 
 #: ang/crmUi.js
 msgid "Revert %1?"
-msgstr ""
+msgstr "¿Revertir %1?"
 
 #: ang/crmUi.js
 msgid "Are you sure you want to delete this?"
-msgstr ""
+msgstr "¿Está seguro que desea eliminar esto?"
 
 #: ang/crmUi.js
 msgid "Delete %1?"
-msgstr ""
+msgstr "¿Eliminar %1?"
 
 #: js/Common.js
 msgid "new tag"
@@ -13356,7 +13356,7 @@ msgstr "Buscable"
 
 #: js/model/crm.uf.js
 msgid "Markup"
-msgstr ""
+msgstr "Markup"
 
 #: js/model/crm.uf.js
 msgid "Entity Name"
