--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -31,7 +31,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-18 11:36+0000\n"
+"PO-Revision-Date: 2016-08-22 11:30+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -1093,7 +1093,7 @@ msgstr "El recordatorio seleccionado ha sido eliminado."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your new Reminder titled %1 has been saved."
-msgstr ""
+msgstr "Su nuevo recordatorio con título %1 ha sido guardado."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your Reminder titled %1 has been updated."
@@ -2198,12 +2198,12 @@ msgstr "Combinar Etiquetas"
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Summary"
-msgstr ""
+msgstr "Permisos: Resumen"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Details"
-msgstr ""
+msgstr "Permisos: Detalles"
 
 #: ang/crmCxn/AdvTable.html
 msgid "Property"
@@ -2215,115 +2215,115 @@ msgstr "La aplicación, /\"%1/\", solicita permiso para acceder a su sistema."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
-msgstr ""
+msgstr "¿Está seguro que desea reconectar \\\"%1\\\"?"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid ""
 "Reconnecting will change the connection details (such as callback URLs and "
 "permissions). This can be useful in a few cases, such as:"
-msgstr ""
+msgstr "Si se realiza la reconexión se cambiarán detalles de la conexión actual (como las llamadas callbak, las URLs o los permisos). Esto puede ser útil en algunos casos, como:"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After your site has migrated to a new URL."
-msgstr ""
+msgstr "Luego de que su sitio ha sido migrado a la nueva dirección URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has migrated to a new URL."
-msgstr ""
+msgstr "Luego de que la aplicación ha sido migrada a la nueva dirección URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has changed permission requirements."
-msgstr ""
+msgstr "Luego de que la aplicación ha cambiado los requerimientos de los permisos."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has a major failure or reset."
-msgstr ""
+msgstr "Luego de que la aplicación tenga un fallo o se halla reiniciado."
 
 #: ang/crmCxn/Connectivity.html
 msgid ""
 "There was a problem verifying that this site is available on the public "
 "Internet."
-msgstr ""
+msgstr "Ha habido un problema al verificar que este sitio está disponible públicamente en Internet."
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
-msgstr ""
+msgstr "Vea también:"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
-msgstr ""
+msgstr "Cortafuegos y Proxies"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
 "Connections provide a simplified way to link your CiviCRM installation to an"
 " external service."
-msgstr ""
+msgstr "Utilizando las Conexiones \"Connections\" puede conectar su CiviCRM a un servicio externo."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
-msgstr ""
+msgstr "Conexiones existentes"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: About"
-msgstr ""
+msgstr "%1: Acerca de"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Settings (External)"
-msgstr ""
+msgstr "%1: Configuración (Externa)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Logs (External)"
-msgstr ""
+msgstr "%1: Logs (Externos)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Logs"
-msgstr ""
+msgstr "Logs"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Documentation (External)"
-msgstr ""
+msgstr "%1: Documentación (Externa)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Docs"
-msgstr ""
+msgstr "Documentos"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Support (External)"
-msgstr ""
+msgstr "%1: Soporte (Externo)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Support"
-msgstr ""
+msgstr "Soporte"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Reconnect"
-msgstr ""
+msgstr "%1: Reconexión"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Reconnect"
-msgstr ""
+msgstr "Reconexión"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Disconnect"
-msgstr ""
+msgstr "%1: Desconexión"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
 "Are you sure you want to disconnect \"%1?\". Doing so may permanently "
 "destroy data linkage."
-msgstr ""
+msgstr "¿Está seguro de que desea desconectar \"%1\"? Al realizar esto permanentemente se destruirá la conexión de datos."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Disconnect"
-msgstr ""
+msgstr "Desconexión"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "Nuevas conexiones"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
-msgstr ""
+msgstr "%1: Conectar"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Connect"
