po: update po/sv_SE/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-27 09:41+0000\n"
+"PO-Revision-Date: 2016-08-22 12:15+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -524,7 +524,7 @@ msgstr "Hantera anpassade sökningar"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Organization Address and Contact Info"
-msgstr "Organisationens adress och kontaktinformation"
+msgstr "Adress och kontaktinformation för organisation"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2188,7 +2188,7 @@ msgstr "Systemstatus"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Components"
-msgstr ""
+msgstr "Komponenter"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
