--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-06 19:11+0000\n"
+"PO-Revision-Date: 2016-08-22 12:40+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2239,7 +2239,7 @@ msgstr ""
 msgid ""
 "Connections provide a simplified way to link your CiviCRM installation to an"
 " external service."
-msgstr ""
+msgstr "Kopplingar är ett förenklat sätt att koppla din CiviCRM-installation till externa tjänster."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
@@ -3239,7 +3239,7 @@ msgstr ""
 msgid ""
 "These optional components give you more tools to connect with and engage "
 "your supporters."
-msgstr ""
+msgstr "Dessa valfria komponenter ger dig fler verktyg att hålla kommunikationen igång med dina kontakter."
 
 #: templates/CRM/Admin/Form/Setting/Component.hlp
 msgid ""
