--- a/po/es_ES/common-components.po
+++ b/po/es_ES/common-components.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Adrian Torralba Roman, 2016
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013
 # Fernando <badeaselche@hotmail.com>, 2012
 # Carlos Capote <carloscapote@masticable.org>, 2012-2014
@@ -29,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-18 15:03+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-23 07:24+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2256,7 +2256,7 @@ msgstr "Correo electrónico de notificación"
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Median"
-msgstr ""
+msgstr "Media"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
