po: update po/es_ES/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/report.po
+++ b/po/es_ES/report.po
@@ -3,13 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Adrian Torralba Roman, 2016
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # David Cereceto Martínez <dcereceto@gmail.com>, 2014
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # fmcooke <fmcooke@yahoo.com>, 2012
 # fmcooke <fmcooke@yahoo.com>, 2012
 # francescbassas <francesc@babu.cat>, 2014-2015
-# ixiam <info@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2013,2016
 # Irene Estefania <iestefania@ndi.org>, 2015
 # iWi development <iwidevelopment@gmail.com>, 2012
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-22 15:01+0000\n"
+"PO-Revision-Date: 2016-08-23 10:54+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,7 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance ID"
-msgstr "Informe Instancia Identificador"
+msgstr "Identificador del reporte"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Domain ID"
