po: update po/es_ES/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/event.po
+++ b/po/es_ES/event.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Adrian Torralba Roman, 2016
+# Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # Carlos Capote <carloscapote@masticable.org>, 2014
 # David Cereceto Martínez <dcereceto@gmail.com>, 2014
 # fmcooke <fmcooke@yahoo.com>, 2012
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-18 15:41+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-08-23 12:55+0000\n"
+"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -346,7 +346,7 @@ msgstr "Titulo del template de evento"
 
 #: CRM/Event/DAO/Event.php
 msgid "Created By Contact ID"
-msgstr ""
+msgstr "Creado por el ID de contacto"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Created Date"
@@ -1273,7 +1273,7 @@ msgstr "La tarifa(s) del evento no pueden ser negativas. Por favor seleccione un
 
 #: CRM/Event/Form/Registration/Register.php
 msgid "Please select a Payment Method"
-msgstr ""
+msgstr "Por favor, selecciona un método de pago"
 
 #: CRM/Event/Form/Registration/Register.php
 msgid ""
@@ -2222,7 +2222,7 @@ msgstr "Crear un grupo de campos personalizados que será usado para <strong> Pa
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Add your field(s) this custom field group."
-msgstr ""
+msgstr "Añade tu campo(s) a este grupo de campos personalizados"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Create a profile (e.g. 'Participant Information')."
@@ -2230,7 +2230,7 @@ msgstr "Crear un Perfil (Ejemplo: Información del participante)"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Add your custom field(s) to this profile as profile fields."
-msgstr ""
+msgstr "Añade tu campo(s) personalizado a este perfil como campo de perfil."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3638,213 +3638,213 @@ msgstr "El registro para el evento a expirado para %1"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is %1"
-msgstr ""
+msgstr "Participante es %1"
 
 #: CRM/Event/BAO/Query.php
 msgid ""
 "Please check that your Event Date Range is in correct chronological order."
-msgstr ""
+msgstr "Por favor revisa que tu rango de fecha en el evento tiene un orden cronológico correcto."
 
 #: CRM/Event/BAO/Query.php
 msgid ""
 "Please check that your Registration Date Range is in correct chronological "
 "order."
-msgstr ""
+msgstr "Por favor revisa que tu rango de fecha en el registro tiene un orden cronológico correcto."
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Cart ID"
-msgstr ""
+msgstr "ID del carro"
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Complete?"
-msgstr ""
+msgstr "¿Completado?"
 
 #: CRM/Event/Cart/DAO/EventInCart.php
 msgid "Event In Cart"
-msgstr ""
+msgstr "Evento en carro"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role"
-msgstr ""
+msgstr "Rol por defecto"
 
 #: CRM/Event/DAO/Event.php
 msgid "Maximum number of additional participants per registration"
-msgstr ""
+msgstr "Máximo numero de participantes adicionales por resgistro"
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Self-service Cancellation or Transfer"
-msgstr ""
+msgstr "Permitir auto-servicio de cancelación o transferencia"
 
 #: CRM/Event/DAO/Event.php
 msgid "Self-service Cancellation or Transfer Time"
-msgstr ""
+msgstr "Tiempo de auto-servicio de cancelación o transferencia"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Transferred to Contact ID"
-msgstr ""
+msgstr "Transferido al ID de contacto"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Maximum additional participants"
-msgstr ""
+msgstr "Máximos participantes adiccionales"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Allow self-service cancellation or transfer?"
-msgstr ""
+msgstr "¿Permitir auto-servicio de cancelación o transferencia?"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Cancellation or transfer time limit (hours)"
-msgstr ""
+msgstr "Tiempo límite de cancelación o transferencia (horas)"
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid ""
 "Sorry, it looks like this event only has %2 spaces available, and you are "
 "trying to register %1 participants. Please change your selections "
 "accordingly."
-msgstr ""
+msgstr "Lo lamento, parece que este evento solo tiene %2 espacios disponible, y está intentando registrar %1 participantes, Por favor cambie su selección acordemente."
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only a single space is available for this option."
-msgstr ""
+msgstr "Lo siento, actualmente solo hay un espacio disponible para esta opción."
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only %1 spaces are available for this option."
-msgstr ""
+msgstr "Lo siento, actualmente solo %1 espacios estás disponibles para esta opción."
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
 "You do not have sufficient permission to transfer/cancel this participant."
-msgstr ""
+msgstr "No tienes suficientes permisos para transferir/cancelar este participante."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To Email"
-msgstr ""
+msgstr "Al correo electrónico"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To Last Name"
-msgstr ""
+msgstr "Al apellido"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To First Name"
-msgstr ""
+msgstr "Al nombre"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Transfer Registration"
-msgstr ""
+msgstr "Transferir registro"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Enter valid email address."
-msgstr ""
+msgstr "Ingresa un correo electrónico válido."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid " is already registered for this event"
-msgstr ""
+msgstr "Ya está registrado para este evento"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Registration Transferred"
-msgstr ""
+msgstr "Registro transferido"
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "A cancellation email has been sent to %1."
-msgstr ""
+msgstr "Un correo electrónico de cancelación ha sido enviado a %1."
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "Thanks"
-msgstr ""
+msgstr "Gracias"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
 "Registration for this event cannot be cancelled or transferred once the "
 "event has begun. Contact the event organizer if you have questions."
-msgstr ""
+msgstr "El registro para este evento no se puede cancelar o transferir una vez que el evento ha empezado. Contacta con el organizador del evento si tiene alguna pregunta."
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
 "Registration for this event cannot be cancelled or transferred less than %1 "
 "hours prior to the event's start time. Contact the event organizer if you "
 "have questions."
-msgstr ""
+msgstr "El registro para este evento no se puede cancelar o transferir %1 horas antes de comenzar el evento. Contacta con el organizador del evento si tiene alguna pregunta."
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Transfer or Cancel Registration"
-msgstr ""
+msgstr "Transferir o cancelar registro"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Transfer"
-msgstr ""
+msgstr "Transferir"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Submit"
-msgstr ""
+msgstr "Enviar"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Please select Transfer OR Cancel action."
-msgstr ""
+msgstr "Por favor selecciona transferir o cancelar."
 
 #: CRM/Event/Form/Task/Batch.php CRM/Event/Form/Task/PickProfile.php
 #: CRM/Event/Task.php
 msgid "Update multiple participants"
-msgstr ""
+msgstr "Actualizar múltiple participantes"
 
 #: CRM/Event/Form/Task/Batch.php
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple participants."
-msgstr ""
+msgstr "Tipo de campo(s) Archivo o Auto-completado en el perfil seleccionado no son soportados en la actualización múltiple de participantes."
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
-msgstr ""
+msgstr "Borrar participantes del evento"
 
 #: CRM/Event/Task.php
 msgid "Export participants"
-msgstr ""
+msgstr "Exportar participantes"
 
 #: CRM/Event/Task.php
 msgid "Cancel registration"
-msgstr ""
+msgstr "Cancelar registro"
 
 #: CRM/Event/Task.php
 msgid "Participant status - change (emails sent)"
-msgstr ""
+msgstr "Estado del participante - Cambiar (enviar correos electrónicos)"
 
 #: CRM/Event/Task.php
 msgid "Name badges - print"
-msgstr ""
+msgstr "Tarjetas de identificación - Imprimir"
 
 #: CRM/Event/Task.php
 msgid "PDF letter - print for participants"
-msgstr ""
+msgstr "Cartas PDF -Imprimir para participantes"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Email)"
-msgstr ""
+msgstr "Contacto de evento (Correo electrónico)"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Phone)"
-msgstr ""
+msgstr "Contacto de evento (Teléfono)"
 
 #: templates/CRM/Event/Form/EventFees.tpl
 msgid ""
 "The Payment Status for this participant is Completed. The Participant Status"
 " is set to Pending (pay later). Click Cancel if you want to review or modify"
 " these values before saving this record"
-msgstr ""
+msgstr "El estado de pago para este participante es Completado. El estado del participante será puesto como Pendiente (pagar luego). Pincha en Cancelar si quieres revisar o modificar estos valores antes de guardar este registro."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Maximum Additional Participants"
-msgstr ""
+msgstr "Máximos participantes adicionales"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
 "Limit the number of additional participants that can be registered in a "
 "single booking."
-msgstr ""
+msgstr "Limite de número de participantes adicionales que se pueden registrar en una reserva"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
 "Eg: if you choose '2' then the lead booker can bring 2 guests; there would "
 "be a limit of 3 participants in total per booking."
-msgstr ""
+msgstr "Ej: Si elige '2' entonces el encargado de reserva puede traer 2 invitados; por tanto habría un límite de 3 participantes en total por reserva."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3855,11 +3855,11 @@ msgid ""
 "status - change' task. Approved participants will move to 'Pending from "
 "approval' status, and will be sent an email with a link to complete their "
 "registration (including paying event fees - if any). "
-msgstr ""
+msgstr "Marque esta casilla para que se necesite aprobación administrativa para todos los participantes que se auto-registren, antes de ser capaz de completar el proceso de registro. Los participantes quedaran en el estado 'Esperando aprobación'. Puede revisar y aprobar  participantes en 'Buscar participantes' - selecciona la tarea 'Estado de participante - Cambiar'. Los participantes aprobados se moverán al estado ' Pendiente de aprobación', y se enviara un correo electrónico con un enlace para completar el registro (Incluyendo el pago de las tasas del evento - si las hay)."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Allow Self-service Cancellation or Transfer?"
-msgstr ""
+msgstr "¿Permitir auto-servicio de cancelación o transferencia?"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3867,56 +3867,56 @@ msgid ""
 " their registration OR transfer it to another participant. If this feature "
 "is enabled, event confirmation emails will include a link to a Cancel or "
 "Transfer form."
-msgstr ""
+msgstr "Marque esta casilla si quiere permitir a los participantes registrados cancelar O transferirlo a otro participante. Si esta opción esta activada, el correo electrónico de confirmación, incluirá un enlace al formulario para Cancelar o Transferir."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
 "<strong>Automated refunds for cancellations are NOT currently "
 "supported.</strong> Participants who have paid for an event will be notified"
 " that cancellations are not refundable."
-msgstr ""
+msgstr "<strong>El reembolso automático NO es soportado actualmente</strong>\nLos participantes que han pagado por un evento serán notificados que las cancelaciones no son reembolsables."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Cancellation or Transfer Time Limit"
-msgstr ""
+msgstr "Limite de cancelación o transferencia"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
 "Number of hours prior to event start date to allow self-service cancellation"
 " or transfer. Enter 0 (or leave empty) to allow cancellation or transfer up "
 "until the event has started."
-msgstr ""
+msgstr "Número de horas antes del comienzo del evento para permitir el auto-servicio de cancelación o transferencia.\nIntroduzca 0 ( o déjelo vacío ) para permitir la cancelación o transferencia hasta que el evento comienza."
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "View this Participant"
-msgstr ""
+msgstr "Ver este participante"
 
 #: templates/CRM/Event/Form/SelfSvcTransfer.tpl
 msgid "Current<br />Participant"
-msgstr ""
+msgstr "Participante<br />Actual"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Thank you for your participation."
-msgstr ""
+msgstr "Gracias por su participación."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong> %1</strong>."
-msgstr ""
+msgstr "Esta carta es una confirmación de que su registro ha sido recibido y tu estado se actualizará a <strong>%1</strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>waitlisted</strong>."
-msgstr ""
+msgstr "Esta carta es una confirmación de que su registro ha sido recibido y tu estado se actualizará a <strong>en lista de espera</strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>registered<strong>."
-msgstr ""
+msgstr "Esta carta es una confirmación de que su registro ha sido recibido y tu estado se actualizará a <strong>registrado</strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
@@ -3925,55 +3925,55 @@ msgstr ""
 msgid ""
 "You may transfer your registration to another participant or cancel your "
 "registration up to %1 hours before the event."
-msgstr ""
+msgstr "Puede transferir su registro a otro participante o cancelar el registro hasta %1 horas antes del evento."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/participant_confirm_html.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
 msgid "Cancellations are not refundable."
-msgstr ""
+msgstr "La cancelaciones no tienen reembolso."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/participant_confirm_html.tpl
 msgid "Click here to transfer or cancel your registration."
-msgstr ""
+msgstr "Pincha aquí para transferir o cancelar su registro."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to %1."
-msgstr ""
+msgstr "Esta carta es una confirmación de que su registro ha sido recibido y tu estado se actualizará a %1."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to waitlisted."
-msgstr ""
+msgstr "Esta carta es una confirmación de que su registro ha sido recibido y tu estado se actualizará a en lista de espera."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to registered."
-msgstr ""
+msgstr "Esta carta es una confirmación de que su registro ha sido recibido y tu estado se actualizará a registrado."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
 msgid "Transfer or cancel your registration:"
-msgstr ""
+msgstr "Transferir o cancelar su registro:"
 
 #: xml/templates/message_templates/participant_confirm_html.tpl
 msgid "Self service cancel transfer"
-msgstr ""
+msgstr "Auto-servicio cancelar / transferir"
 
 #: xml/templates/message_templates/participant_transferred_html.tpl
 msgid "Your Event Registration has been Transferred to %1."
-msgstr ""
+msgstr "Su registro al evento ha sido Transferido a %1."
 
 #: xml/templates/message_templates/participant_transferred_subject.tpl
 msgid "Event Registration Transferred for %1"
-msgstr ""
+msgstr "Registro al evento transferido a %1."
 
 #: xml/templates/message_templates/participant_transferred_text.tpl
 msgid "Your Event Registration has been transferred to %1."
-msgstr ""
+msgstr "Su registro al evento ha sido transferido a %1."
